# HydroSwift

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  EXAMPLES_AND_NOTEBOOKS.md  GUI_BUILD_SUMMARY.md  GUI_QUICK_REFERENCE.md  LICENSE  PYTHON_API_EXAMPLES.html  PYTHON_API_EXAMPLES.ipynb  README.md  SWIFT_CLI_BEGINNER.html  SWIFT_CLI_BEGINNER.ipynb  changelog.md  citation.cff  cli_api_examples.ipynb  hydroswift.py  hydroswift_cli_examples.ipynb  hydroswift_python_examples.ipynb  json  mkdocs.yml  plot_station_timeseries.py  pyproject.toml  requirements-docs.txt  requirements-gui.txt  requirements.txt  swift.py  swift_test.ipynb  test_cwc.py  test_cwc_structure.py  test_empty_stations.py  test_empty_stations_2.py
.github/workflows/: docs.yml  tests.yml
data_cwc/cwc/stations/: 001-CDBNG_shimoga.csv  001-CDJPR_dhareri.csv  001-ERDBWN_balimundali.csv  001-HYDCHENNAI_chennur.csv  001-LBDJPG_mathanguri.csv  001-LKDHYD_almatti_reservoir.csv  001-LYDAGRA_agra_j.b..csv  001-MAHGAND_chakaliya.csv  001-MBDGHY_guwahatid.c.court.csv  001-MDSIL_kumarghat_gd_site.csv  001-MGD1LKN_colonelganj.csv  001-MGD2LKN_narora_barrage.csv  001-MGD3VNS_azamgarh.csv  001-MGD4PTN_chanpatia.csv  001-MGD5PTN_buxar.csv  001-NDBHP_mukki.csv  001-SHDSIM_titang.csv  001-SRDCBE_avarankuppam.csv  001-SWRDKOCHI_erinjipuzha.csv  001-TDSURAT_bodeli.csv  001-UBDDIB_kibithu.csv  001-UKDPUNE_karad.csv  001-UYDDEL_naugaon.csv  001-chejmu_khanabal.csv  001-lgd3beh_bedepara.csv  001-lgdhyd_somanpallyseasonal.csv  001-mdburla_mahulpali.csv  001-neid2_tuichang.csv  001-wgdngp_keolari.csv  002-CDBNG_honnali.csv  002-CDJAPR_tal.csv  002-HGDDDN_joshimath.csv  (+1042 more)
docs/: API_FUNCTIONS_REFERENCE.md  CLI_EXAMPLES.ipynb  CLI_USAGE_GUIDE.md  EXAMPLES_AND_NOTEBOOKS.md  GUI_GUIDE.md  PUBLIC_API_AND_CLI.md  PYTHON_API_EXAMPLES.ipynb  PYTHON_API_GUIDE.md  index.md
docs/examples/: hydroswift_python_examples.ipynb
docs/getting_started/: installation.md
hydroswift/: __init__.py  __main__.py
paper/: paper.bib  paper.md
scripts/: install_hyswift_cli.sh  launch_hyswift_gui.sh
swift_app/: __init__.py  __main__.py  api.py  api_public.py  banner.py  base_client.py  cli.py  cwc.py  cwc_meta.csv  cwc_stations.csv  download.py  main.py  merge.py  name-code.csv  plot.py  plot_station_timeseries.py  swift_cursor_agent_refactor_prompt.md  swift_cursor_autopilot_prompt.md  swift_cursor_repo_refactor_plan.md  test.py  utils.py  wris.py  wris_client.py
swift_app/gui/: README.md  __init__.py  __main__.py  app.py  logger_widget.py  main_window.py  panels.py  settings_dialog.py
tests/: test_api.py  test_api_public.py  test_banner.py  test_basic.py  test_branding.py  test_cwc.py  test_interface_messages.py  test_plotting.py
(+134 files in other folders)
