[tool.setuptools]
packages = ["swift_app"]

[tool.setuptools.package-data]
swift_app = ["*.csv"]
[project]
name = "swift-wris"
version = "1.0.0"
description = "Simple Water Information Fetch Tool"
authors = [{name="Carbform"}]
requires-python = ">=3.9"

dependencies = [
    "requests",
    "pandas",
    "tqdm",
    "openpyxl",
    "matplotlib"
]

[project.optional-dependencies]
geo = ["geopandas", "shapely"]
rich = ["rich"]
all = ["geopandas", "shapely", "rich"]

[project.scripts]
swift = "swift_app.main:main"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:datetime.datetime.utcfromtimestamp\\(\\) is deprecated:DeprecationWarning"
]