[tool.setuptools]
packages = ["swift_app", "hydroswift"]

[tool.setuptools.package-data]
swift_app = ["*.csv"]

[project]
name = "hydroswift"
version = "1.0.0"
description = "Fast, unified workflows for hydrological data."
authors = [{name="Carbform"}]
requires-python = ">=3.9"
keywords = ["hydrology", "water-resources", "data", "basin", "india"]

dependencies = [
    "requests",
    "pandas",
    "tqdm",
    "openpyxl",
    "matplotlib"
]

[project.urls]
Homepage = "https://github.com/carbform/HydroSwift"
Documentation = "https://hydroswift.readthedocs.io"

[project.optional-dependencies]
geo = ["geopandas", "shapely"]
rich = ["rich"]
gui = ["PyQt5>=5.15.0", "PyQt5-stubs"]
all = ["geopandas", "shapely", "rich", "PyQt5>=5.15.0", "PyQt5-stubs"]

[project.scripts]
hyswift = "hydroswift.main:main"
hyswift-gui = "swift_app.gui.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:datetime.datetime.utcfromtimestamp\\(\\) is deprecated:DeprecationWarning"
]
